css/style.css
/* .svgContainer {
  width: 100vw;
  height: 100vh;
}
svg {
  width: 100%;
  height: 100%;
} */

body {
  margin: 0;
  font-family: 'Roboto', sans-serif;
  color: rgba(0, 0, 0, 0.8)
}

body > * {
  padding: 8em 40em 8em 20%;
  min-width: 40em;
}

/* ================================MISC */

.orange {
  color: rgb(245, 190, 98);
}

.orange-underline {
  background-size: 1px 1em;
  box-shadow: inset 0 -5px rgb(245, 190, 98, 0.9);
  display: inline;
  /* text-decoration: underline;
  text-decoration-color: rgb(245, 190, 98);
  text-decoration-style: solid; */
}


.grey-bg {
  /* padding: 8em 32em 8em 8em; */
  background-color: #f4f4f4;
}

/* ================================SVG */

.svg-container {
  position: absolute;
  top: -20px;
  left: -90px;
}


/* ================================HEADER */

.header-title {
  padding: 20px 0;
  font-size: 9em;
}

.header-hello {
  margin-left: -9px;
  color: lightslategray;
  font-family: 'Archivo Black', serif;
}

.fullstop {
  font-weight: bold;
}

.header-intro {
  font-size: 2.25em;
  line-height: 1.25em;
  display: block;
}

.header-description {
  line-height: 1.6em;
}

/* ================================PROJECTS */

.projects-container {
  padding-top: 4em;
}

.projects-title {
  color: lightslategray;
  font-family: 'Archivo Black', serif;
  font-size: 4em;
  font-weight: bold;
}

.projects-list {
  padding-left: 0;
  list-style: none;
}

.projects-list > li {
  margin-top: 3em;
  margin-bottom: 9em;
}


.project-name {
  font-family: 'Domine', serif;
  font-size: 2.25em;
  line-height: 1.25em;
}

.technologies-list {
  padding: 0;
}

.technologies-list > li {
  list-style: none;
  display: inline-block;
  background-color: rgba(245, 190, 98, 0.9);
  padding: 2px 5px 2px 5px;
  font-size: 0.8em;
  font-weight: 300;
  margin-top: 5px;
  margin-right: 5px;
  border-radius: 2px;
}

.project-description {
  line-height: 1.7em;
}

.projects-image {
  margin: 1em 0 1em 0;
  width: 90%;
  border: 1px solid rgba(0, 0, 0, 0.2);
}

.project-links {
  padding-top: 1.5em;
  color: lightslategray;
}

.project-links > a {
  font-family: 'Raleway', sans-serif;
  color: lightslategray;
  text-decoration: none;
  margin-right: 6px;
  margin-left: 6px;
}

.project-links > a:visited {
  text-decoration: none;
}

.project-links > a:hover {
  background-size: 1px 1em;
  box-shadow: inset 0 -2px rgb(245, 190, 98, 0.9);
  display: inline;
}

.link-icons {
  margin-left: 3px;
}

.open-icon {
  position: relative;
  top: 2px;
  max-height: 16px;
}

.git-icon {
  max-height: 15px;
}


/* ================================CONTACT */

.contact-container {
  padding-top: 4em;
}

.contact-title {
  color: lightslategray;
  font-family: 'Archivo Black', serif;
  font-size: 4em;
}

.media-list {
  padding: 0;
}

.email {
  font-size: 1.5em;
}

.media-list > li {
  padding-right: 30px;
  display: inline-block;
  list-style: none;
}

.media-list > li > a > img {
  width: 35px;
}

/* ===========TABLET=========== */
@media only screen and (max-width: 990px) {
  body > * {
    padding: 5em 10% 5em 10%;
    min-width: 20em;
  }
}

/* ===========MOBILE=========== */

@media only screen and (max-width: 520px) {

  body > * {
    padding: 5em 5% 5em 5%;
    min-width: 20em;
  }

  /* .svg-container {
    position: absolute;
    left: 1em;
  } */

  /* ================================MISC */

  .orange {
    color: rgb(245, 190, 98);
  }

  .orange-underline {
    background-size: 1px 1em;
    box-shadow: inset 0 -0.15em rgb(245, 190, 98, 0.9);
    display: inline;
    /* text-decoration: underline;
    text-decoration-color: rgb(245, 190, 98);
    text-decoration-style: solid; */
  }

  /* ================================HEADER */

  .header-title {
    font-size: 6em;
  }

  .header-intro {
    font-size: 1.625em;
    line-height: 1.1538em;
  }

  .header-description {
    line-height: 1.25em;
  }

  /* ================================PROJECTS */

  .projects-title {
    font-size: 3em;
  }

  .projects-list > li {
    margin-top: 1em;
  }


  .project-name {
    font-size: 1.375em;
    line-height: 1.136em;
  }

  .technologies-list {
    padding: 0;
  }

  .technologies-list > li {
    margin-top: 7px;
    font-size: 0.6em;
  }

  .project-description {
    line-height: 1.25em;
  }

  .projects-image {
    margin: 1em 0 1em 0;
    width: 100%;
    border: 1px solid rgba(0, 0, 0, 0.2);
  }

  .project-links {
    min-width: 390px;
    font-size: 0.7em;
  }

  .open-icon {
    position: relative;
    top: 3px;
    max-height: 14px;
  }

  .git-icon {
    max-height: 13px;
  }

  /* ================================CONTACT */


  .contact-title {
    font-size: 3em;
  }
}

